--- a/ouab.cls
+++ b/ouab.cls
@@ -28,6 +28,7 @@
 \RequirePackage{ifthen}
 \RequirePackage[inline,shortlabels]{enumitem}
 \RequirePackage{marginnote}
+\RequirePackage[labelsep=quad]{caption} % Fixes figure captions to OU style
 %%
 %%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
