--- a/abtemplate.tex
+++ b/abtemplate.tex
@@ -25,6 +25,7 @@
 \abinstructions{%
 Module-specific instructions for the front page.
 }% ends \abinstructions
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{document}
 \maketitle
@@ -60,13 +61,15 @@ Module-specific instructions for the front page.
 %   \item ...
 % \end{options}
 %
-% \begin{inlineoptions}{no_of_cols}
+% \begin{inlineoptions}[line spacing]{no_of_cols}
 %   \item ...
 %   \item ...
 % \end{inlineoptions}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \tma[12 November 2014]{01}[Covers units A and B]
+
+
 
 \question[(essay question)]{25}
 \emph{This question is about nothing in particular.}
