ouexam: \putendtext command
\putendtext command enables “[END OF QUESTION PAPER]” to appear before
\end{document}

--- a/examtemplate.tex
+++ b/examtemplate.tex
@@ -194,6 +194,9 @@ The class file is based on the standard article class file, so commands such as 
 \end{enumerate}
 \end{enumerate}
 
+
+%\putendtext % Can be used to make the [END OF QUESTION PAPER] text appear before \end{document}
+
 \end{document}
 
 %% Optional section, if you want to insert solutions at the end of the document to form a mark scheme.
