ouab v0.93 \nocutoffdate added
\nocutoffdate can be used in preamble to suppress "Cut-off date" text.

--- a/abtemplate.tex
+++ b/abtemplate.tex
@@ -19,6 +19,7 @@
 \suppno{WEB 12345 6} %can be omitted for "DRAFT"
 \versionno{1.0} %optional
 %\optiontext{} %Can be used to change text appearing at top of multi-choice options.
+%\nocutoffdate % Suppresses "Cut-off date" text from appearing
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % INSTRUCTIONS ON FIRST PAGE
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
