Documentation: added \nocutoffdate to ouab
Per ouab v0.93

--- a/Documentation/ou-supps.tex
+++ b/Documentation/ou-supps.tex
@@ -182,6 +182,11 @@ Sets the version number, mainly used by DPU/LTS (optional, default is blank).
 \end{desc}
 Changes the text that appears at the top of multi-choice questions (optional, default is `Options:'). Does not need to be in the preamble, so you can change the text for options part-way through the document.
 
+\begin{desc}
+|\nocutoffdate|
+\end{desc}
+This switches off the text ``Cut-off date'' that appears (e.g.) on the front page (optional). Use this for modules where the cut-off dates are not provided in the assignment booklet.
+
 
 \begin{desc}
 |\abinstructions{...}|
